--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.mongodb.embedded.version=3.0.4
 spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 spring.data.mongodb.database=education_restApi
+spring.security.user.password=password
